# appian-deployment-cli-binary

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: client.rs  config.rs  error.rs  lib.rs  main.rs  models.rs
src/commands/: deploy.rs  deployment_results.rs  download_package.rs  export.rs  get_packages.rs  inspect.rs  inspection_results.rs  logs.rs  mod.rs  monitor.rs  status.rs
