[package]
name = "appian-deployment-cli"
version = "0.1.0"
edition = "2021"
authors = ["Appian Deployment CLI Team"]
description = "Cross-platform CLI for Appian Deployment REST API v2"
license = "MIT"
repository = "https://github.com/adrianpuiu/appian-deployment-cli-binary"
keywords = ["appian", "deployment", "api", "cli", "automation"]
categories = ["command-line-utilities", "api-bindings"]

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
# Disable reqwest default TLS to avoid conflict; opt into tls via crate features below
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"
colored = "2.0"
url = "2.4"
tokio-retry = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
tempfile = "3.8"
# Optional dependency used only when integration-tests feature is enabled
wiremock = { version = "0.5", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
tokio-test = "0.4"

[features]
# Default features use rustls for TLS to keep builds portable
# Command features gate API calls for leaner binaries
# native-tls feature available for environments that require OS-native TLS
# integration-tests toggles wiremock (dev only)
default = [
    "rustls-tls",
    "get_packages",
    "export",
    "validate",
    "deploy",
    "status",
    "monitor",
    "download",
]
rustls-tls = ["reqwest/rustls-tls"]
get_packages = []
export = []
validate = []
deploy = []
status = []
monitor = []
download = []
logs = []
native-tls = ["reqwest/native-tls"]
# Use dep:wiremock to activate the optional dependency correctly
integration-tests = ["dep:wiremock"]

[[bin]]
name = "appian-deployment-cli"
path = "src/main.rs"

[lib]
name = "appian_deployment_cli"
path = "src/lib.rs"
